.opsera-healthcp/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcp
  labels:
    app: healthcp
    tenant: opsera
spec:
  type: ClusterIP
  selector:
    app: healthcp
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
